src/app/components/component-view/playgrounds/carousel-playground/carousel-playground.component.css
:host {

    &::ng-deep carousel .content {
        /* Quick fix, will not be needed in future versions of the carousel component */
        box-sizing: content-box;
    }
}

.link {
    color: #2222ff;

    &:hover {
        text-decoration: underline;
    }
}

.section-title {
    text-align: center;
    margin-block: 0.5rem;
}

.subsection-title {
    text-align: center;
    margin-bottom: 0.3rem;
}

.main-section {
    display: flex;
    justify-content: center;
    align-items: center;

    .container {
        display: grid;
        grid-template-rows: repeat(auto, 3);

        & > section, & > article {
            margin-bottom: 2rem;
        }

        .introduction {

            & p {
                padding-inline: 0.2rem;
                max-width: 150ch;
                margin: 0 auto;
            }
        }

        & .custom-section {

            & .custom-container {
                display: flex;
                justify-content: center;
                flex-wrap: wrap;
                column-gap: 3rem;
                row-gap: 2rem;

                & .number-input-container {

                    & input[type="number"] {
                        max-width: 3.5rem;
                    }
                }


                & .radio-input-container {
                    margin-block: 0.1rem;

                    & input[type="radio"] {
                        margin-right: 0.3rem;
                    }
                }

                & .scroll-behavior-section {
                    display: flex;
                    justify-content: center;
                    flex-wrap: wrap;
                    column-gap: 3rem;
                    row-gap: 1rem;


                    & .auto-scroll-container {
                        display: none;

                        & .subsection-title {
                            color: #000a;
                        }
                    }

                }

            }
        }


        .main-component {
            max-width: 100vw;
        }
    }
}

